--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,11 @@
 language: csharp
 dist: trusty
-sudo: required  
+sudo: required
 mono: none
 dotnet: 2.1.502
 script:
-  - dotnet restore
-  - dotnet build
+- dotnet restore
+- dotnet build
+before_install:
+- openssl aes-256-cbc -K $encrypted_3656ade6b6b0_key -iv $encrypted_3656ade6b6b0_iv
+  -in deploy_rsa.enc -out deploy_rsa -d
