--- a/.travis.yml
+++ b/.travis.yml
@@ -15,10 +15,12 @@ before_deploy:
 deploy:
     provider: script
     skip_cleanup: true
-    script: ls && rsync -r --delete-after -e "ssh -i deploy_rsa -p $server_port" $TRAVIS_BUILD_DIR/backendHackathone/bin/Release/netcoreapp2.1/publish/
+    script: rsync -r --delete-after -e "ssh -i deploy_rsa -p $server_port" $TRAVIS_BUILD_DIR/backendHackathone/bin/Release/netcoreapp2.1/publish/
         $server_user@$server_ip:/home/marchenkors/www/testapp/publish
     on:
         branch: master
 before_install:
 - openssl aes-256-cbc -K $encrypted_3656ade6b6b0_key -iv $encrypted_3656ade6b6b0_iv
   -in deploy_rsa.enc -out deploy_rsa -d
+after_deploy:
+  - ssh -i deploy_rsa -p $server_port $server_user@$server_ip 'systemctl restart kestrel-test.service'
