--- a/.travis.yml
+++ b/.travis.yml
@@ -23,4 +23,4 @@ before_install:
 - openssl aes-256-cbc -K $encrypted_3656ade6b6b0_key -iv $encrypted_3656ade6b6b0_iv
   -in deploy_rsa.enc -out deploy_rsa -d
 after_deploy:
-  - ssh -i deploy_rsa -p $server_port $server_user@$server_ip 'systemctl restart kestrel-test.service'
+  - ssh -i deploy_rsa -p $server_port $server_user@$server_ip 'echo $secret | sudo -S systemctl restart kestrel-test.service'
