add first migration

--- a/backendHackathone/appsettings.json
+++ b/backendHackathone/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "\"Server=tcp:hackathonsqlsrv.camj7n5qw389.us-east-2.rds.amazonaws.com,1433;Integrated Security=false;Initial Catalog=hackathonSql;User Id=AppUser;Password=ACypLRH6Vp$857EEV;"
+    "DefaultConnection": "Server=tcp:hackathonsqlsrv.camj7n5qw389.us-east-2.rds.amazonaws.com,1433;Integrated Security=false;Initial Catalog=hackathonSql;User Id=AppUser;Password=ACypLRH6Vp$857EEV;"
   },
   "Logging": {
     "LogLevel": {
