--- a/backendHackathone/backendHackathone.csproj
+++ b/backendHackathone/backendHackathone.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\backendHackathone.Core\backendHackathone.Core.csproj" />
+    <ProjectReference Include="..\backendHackathone.DAL\backendHackathone.DAL.csproj" />
   </ItemGroup>
 
 </Project>
