impl some domen add

--- a/backendHackathone/backendHackathone.csproj
+++ b/backendHackathone/backendHackathone.csproj
@@ -14,7 +14,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\backendHackathone.Core\backendHackathone.Core.csproj" />
     <ProjectReference Include="..\backendHackathone.DAL\backendHackathone.DAL.csproj" />
+    <ProjectReference Include="..\backendHackathone.PresentLayer\backendHackathone.PresentLayer.csproj" />
   </ItemGroup>
 
 </Project>
