--- a/backendHackathone.Core/backendHackathone.Core.csproj
+++ b/backendHackathone.Core/backendHackathone.Core.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\backendHackathone.DAL\backendHackathone.DAL.csproj" />
+  </ItemGroup>
+
 </Project>
