--- a/backendHackathone.PresentLayer/backendHackathone.PresentLayer.csproj
+++ b/backendHackathone.PresentLayer/backendHackathone.PresentLayer.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\backendHackathone.Core\backendHackathone.Core.csproj" />
+    <ProjectReference Include="..\backendHackathone.DAL\backendHackathone.DAL.csproj" />
   </ItemGroup>
 
 </Project>
