--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ mono: none
 dotnet: 2.1.502
 script:
   - dotnet restore
-  - dotnet build
+  - dotnet build backendHackathone.sln -c Release
   - dotnet test -c Release --no-build backendHackathone.Tests/backendHackathone.Tests.csproj /p:CollectCoverage=true /p:CoverletOutputFormat=opencover
   - dotnet publish -c Release
 after_script:
